[Chore] Initially completed the GUI and inventory of thermal generators, merged the new texture progress from the original repository.
(Buggy) Thermal Generator GUI Initial
Texture changes

Co-Authored-By: MikhailTapio <81358657+MikhailTapio@users.noreply.github.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ fabric_version=0.40.1+1.17
 loom_version=0.9-SNAPSHOT
 
 # Mod Properties
-mod_version = SNAPSPOT
+mod_version = 0.0.1
 maven_group = dev.anotherfractal
-archives_base_name = FracdustryReimagined
+archives_base_name = Fracdustry
 
 # Kotlin
 kotlin_version=1.5.31
