[Chore] Still working on the GUI of thermal generators...
Update dependencies
Fix some crashes
Not applying the GUI texture of thermal generators temporarily

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # Check these on https://modmuss50.me/fabric.html
 minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.61
-loader_version=0.11.7
+yarn_mappings=1.17.1+build.63
+loader_version=0.12.2
 
 #Fabric api
-fabric_version=0.40.1+1.17
+fabric_version=0.41.0+1.17
 
 loom_version=0.9-SNAPSHOT
 
 # Mod Properties
-mod_version = 0.0.1
+mod_version = SNAPSPOT
 maven_group = dev.anotherfractal
-archives_base_name = Fracdustry
+archives_base_name = FracdustryReimagined
 
 # Kotlin
 kotlin_version=1.5.31
