--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
     }
     maven { url "https://api.modrinth.com/maven" }
     maven { url 'https://maven.wispforest.io' }
+    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
 
 dependencies {
@@ -34,6 +35,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
+
+    modImplementation "software.bernie.geckolib:geckolib-fabric-1.17:3.0.29:dev"
 
     modApi "maven.modrinth:libpow:${project.libpow_version}"
     include "maven.modrinth:libpow:${project.libpow_version}"
